--- a/res/layout/above_slidingmenu.xml
+++ b/res/layout/above_slidingmenu.xml
@@ -43,9 +43,11 @@
             
         </FrameLayout>
         
-        <include layout="@layout/load_failed_layout"/>
+        <include layout="@layout/load_failed_layout"
+            />
         
-        <include layout="@layout/loading_layout"/>
+        <include layout="@layout/loading_layout"
+            android:visibility="gone"/>
         
         <android.support.v4.view.ViewPager
             android:id="@+id/above_pager"
