--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -6,4 +6,5 @@
     android:layout_height="fill_parent"
     android:background="#f5f5f5"
     android:cacheColorHint="#0000"
+    android:divider="@drawable/dis_behind_side"
     />
